# oddp

./: .readthedocs.yaml  README.md  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst  oddp.chain_maps.rst  oddp.powers.rst  oddp.rst  oddp.tate_product.rst
oddp/: __init__.py  _samples.py  _utils.py  chain_maps.py  objects.py  powers.py  tate_product.py
oddp/test/: test_chain_maps.py  test_objects.py  test_tate_product.py  test_utils.py
