[project]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

name = "oddp"
version = "0.0.1"
authors = [
  { name="Federico Cantero", email="federico.j.cantero@gmail.com" },
]
description = "This package implements cochain-level formulas to compute odd power operations on simplicial sets. It also contains chain maps between three resolutions of the cyclic group"
readme = "README.md"
requires-python = ">=3.0"
dependencies = "comch"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

keywords = ["Steenrod operations", "power operations", "Tate cohomology"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"